# example-package-ispackman

./: README.md  pyproject.toml
src/example_package_ispackman/: rescale.py
tests/: test_rescale.py
